# ewoms-eclsimulators

./: CMakeLists.txt  README.md  config.h.cmake  dune.module  ewoms-eclsimulators.pc.in
cmake/modules/: EwomsSimulatorsMacros.cmake
eebos/: alucartesianindexmapper.hh  collecttoiorank.hh  eclalugridvanguard.hh  eclamgbackend.hh  eclbaseaquifermodel.hh  eclbasevanguard.hh  eclbicgstabbackend.hh  eclcpgridvanguard.hh  eclcriterion.hh  ecldummygradientcalculator.hh  eclequilinitializer.hh  eclfluxmodule.hh  eclmpiserializer.hh  eclnewtonmethod.hh  ecloutputblackoilmodule.hh  eclpeacemanwell.hh  eclpolyhedralgridvanguard.hh  eclproblem.hh  eclthresholdpressure.hh  ecltracermodel.hh  ecltransmissibility.hh  eclwellmanager.hh  eclwriter.hh  eebos.hh  eebos_altidx.cc  eebos_blackoil.cc  eebos_blackoil.hh  eebos_blackoil_altidx.cc  eebos_blackoil_amg.cc  eebos_blackoil_main.cc  eebos_blackoil_plain.cc  eebos_brine.cc  eebos_brine.hh  eebos_brine_main.cc  eebos_energy.cc  eebos_energy.hh  eebos_energy_main.cc  eebos_extbo.cc  eebos_extbo.hh  eebos_extbo_main.cc  (+39 more)
eebos/equil/: equilibrationhelpers.hh  initstateequil.hh
eflow/: eflow.cc  eflow_blackoil.cc  eflow_blackoil.hh  eflow_blackoil_dunecpr.cc  eflow_blackoil_poly.cc  eflow_brine.cc  eflow_brine.hh  eflow_energy.cc  eflow_energy.hh  eflow_extbo.cc  eflow_extbo.hh  eflow_foam.cc  eflow_foam.hh  eflow_gasoil.cc  eflow_gasoil.hh  eflow_gaswater.cc  eflow_gaswater.hh  eflow_oilwater.cc  eflow_oilwater.hh  eflow_oilwater_brine.cc  eflow_oilwater_brine.hh  eflow_oilwater_polymer.cc  eflow_oilwater_polymer.hh  eflow_oilwater_polymer_injectivity.cc  eflow_oilwater_polymer_injectivity.hh  eflow_onephase.cc  eflow_onephase_energy.cc  eflow_polymer.cc  eflow_polymer.hh  eflow_solvent.cc  eflow_solvent.hh  eflow_ssasolvent.cc  eflow_ssasolvent.hh  eflow_tag.hh
ewoms/eclsimulators/aquifers/: aquifercartertracy.hh  aquiferfetkovich.hh  aquiferinterface.hh  blackoilaquifermodel.hh  blackoilaquifermodel_impl.hh
ewoms/eclsimulators/deprecated/props/: blackoilphases.hh  phaseusagefromdeck.hh
ewoms/eclsimulators/deprecated/props/satfunc/: relpermdiagnostics.cc  relpermdiagnostics.hh  relpermdiagnostics_impl.hh
ewoms/eclsimulators/eflow/: blackoilmodel.hh  blackoilmodelparameters.hh  countglobalcells.hh  eflowmain.hh  main.hh  missingfeatures.cc  missingfeatures.hh  nonlinearsolver.hh  simulatorfullyimplicitblackoil.hh
ewoms/eclsimulators/linalg/: amgcpr.hh  blackoilamg.hh  blackoilamgcpr.hh  cprpreconditioner.hh  eflowlinearsolverparameters.hh  extractparallelgridinformationtoistl.cc  extractparallelgridinformationtoistl.hh  findoverlaprowsandcolumns.hh  flexiblesolver.hh  flexiblesolver1.cc  flexiblesolver2.cc  flexiblesolver3.cc  flexiblesolver4.cc  flexiblesolver_impl.hh  getquasiimpesweights.hh  graphcoloring.hh  istlsolver.hh  istlsolvercpr.hh  istlsolverflexible.hh  matrixblock.hh  matrixmarketspecializations.hh  matrixutils.hh  owningblockpreconditioner.hh  owningtwolevelpreconditioner.hh  parallelistlinformation.hh  paralleloverlappingilu0.hh  parallelrestrictedadditiveschwarz.hh  preconditionerfactory.hh  preconditionerwithupdate.hh  pressuresolverpolicy.hh  pressuretransferpolicy.hh  setuppropertytree.cc  setuppropertytree.hh  setuppropertytree_impl.hh  twolevelmethodcpr.hh  welloperators.hh  writesystemmatrixhelper.hh
ewoms/eclsimulators/linalg/bda/: bdabridge.cc  bdabridge.hh  bdaresult.hh  cuda_header.hh  cusparsesolverbackend.hh  multisegmentwellcontribution.cc  multisegmentwellcontribution.hh  wellcontributions.hh
ewoms/eclsimulators/timestepping/: adaptivesimulatortimer.cc  adaptivesimulatortimer.hh  adaptivetimestepper.hh  convergencereport.hh  gatherconvergencereport.cc  gatherconvergencereport.hh  simulatorreport.cc  simulatorreport.hh  simulatortimer.cc  simulatortimer.hh  simulatortimerinterface.hh  timestepcontrol.cc  timestepcontrol.hh  timestepcontrolinterface.hh
ewoms/eclsimulators/utils/: deferredlogger.cc  deferredlogger.hh  deferredloggingerrorhelpers.hh  gatherdeferredlogger.cc  gatherdeferredlogger.hh  paralleleclipsestate.cc  paralleleclipsestate.hh  parallelfilemerger.hh  parallelrestart.cc  parallelrestart.hh  parallelserialization.cc  parallelserialization.hh  propscentroidsdatahandle.hh  readdeck.cc  readdeck.hh
ewoms/eclsimulators/wells/: blackoilwellmodel.hh  blackoilwellmodel_impl.hh  gasliftruntime.hh  gasliftruntime_impl.hh  mswellhelpers.hh  multisegmentwell.hh  multisegmentwell_impl.hh  parallelwellinfo.cc  parallelwellinfo.hh  perforationdata.hh  rateconverter.hh  simfibodetails.hh  standardwell.hh  standardwell_impl.hh  targetcalculator.hh  vfphelpers.hh  vfpinjproperties.cc  vfpinjproperties.hh  vfpprodproperties.cc  vfpprodproperties.hh  vfpproperties.hh  wellconnectionauxiliarymodule.hh  wellgrouphelpers.cc  wellgrouphelpers.hh  wellhelpers.hh  wellinterface.hh  wellinterface_impl.hh  wellprodindexcalculator.cc  wellprodindexcalculator.hh  wellstate.hh  wellstatefullyimplicitblackoil.hh
examples/: printvfp.cc
tests/: SUMMARY_DECK_NON_CONSTANT_POROSITY.DATA  TESTTIMER.DATA  capillary.DATA  capillarySwatinit.DATA  capillary_overlap.DATA  deadfluids.DATA  duneistltesthelpers.hh  equil_base.DATA  equil_capillary.DATA  equil_capillary_overlap.DATA  equil_capillary_swatinit.DATA  equil_deadfluids.DATA  equil_livegas.DATA  equil_liveoil.DATA  equil_liveoil_grid.DATA  equil_pbvd_and_pdvd.DATA  equil_rsvd_and_rvvd.DATA  liveoil.DATA  mpifixture.hh  msw.data  norne_pvt.data  options_flexiblesolver.json  relpermDiagnostics.DATA  satfuncEPS_B.DATA  testBlackoilState3.DATA  testFluid.DATA  test_blackoil_amg.cc  test_convergencereport.cc  test_deferredlogger.cc  test_ecl_output.cc  test_equil.cc  test_flexiblesolver.cc  test_gatherconvergencereport.cc  test_gatherdeferredlogger.cc  test_graphcoloring.cc  test_invert.cc  test_milu.cc  test_multmatrixtransposed.cc  test_nncsorter.cc  test_norne_pvt.cc  (+18 more)
